--- a/compose.yaml
+++ b/compose.yaml
@@ -2,7 +2,7 @@ services:
   postgres:
     image: 'postgres:latest'
     environment:
-      - 'POSTGRES_DB=workout-tracker-db'
+      - 'POSTGRES_DB=wt-db'
       - 'POSTGRES_PASSWORD=secret'
       - 'POSTGRES_USER=myuser'
       - 'PG_DATA=/var/lib/postgresql/data/pgdata'
