--- a/compose.yaml
+++ b/compose.yaml
@@ -2,9 +2,9 @@ services:
   postgres:
     image: 'postgres:latest'
     environment:
-      - 'POSTGRES_DB=wt-db'
-      - 'POSTGRES_PASSWORD=secret'
-      - 'POSTGRES_USER=myuser'
+      - 'POSTGRES_DB=${POSTGRES_DB}'
+      - 'POSTGRES_PASSWORD=${POSTGRES_PASS}'
+      - 'POSTGRES_USER=${POSTGRES_USER}'
       - 'PG_DATA=/var/lib/postgresql/data/pgdata'
     volumes:
       - ./postgres/data:/var/lib/postgresql/data
