--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,5 @@ spring.application.name=workouttrackerbackend
 swagger.name=Eli Burch
 swagger.email=eli.burch@burchbytes.com
 swagger.site=https://burchbytes.com
+
+spring.sql.init.mode=always
