--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.application.name=workouttrackerbackend
+spring.application.name=workouttracker
 
 swagger.name=Eli Burch
 swagger.email=eli.burch@burchbytes.com
