--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,8 @@ swagger.email=eli.burch@burchbytes.com
 swagger.site=https://burchbytes.com
 
 spring.sql.init.mode=always
+
+### debug ###
+#logging.level.org.hibernate.SQL=DEBUG
+#logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+#logging.level.org.hibernate.type=TRACE
