--- a/pom.xml
+++ b/pom.xml
@@ -58,6 +58,17 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>com.h2database</groupId>
+			<artifactId>h2</artifactId>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.instancio</groupId>
+			<artifactId>instancio-junit</artifactId>
+			<version>4.6.0</version>
+			<scope>test</scope>
+		</dependency>
 
 		<!-- spring-doc -->
 		<dependency>
