--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,7 +17,8 @@
     "@patternfly/react-table": "^5.3.3",
     "@patternfly/react-tokens": "^5.3.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "supertokens-auth-react": "^0.41.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
