--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -10,11 +10,10 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - shell: bash
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
         env:
             SSH_DEPLOY_KEY = ${{ secrets.SSH_DEPLOY_KEY }}
-        run: |
+      - run: |
           touch /tmp/ssh_key
           chmod 600 /tmp/ssh_key
           echo ${SSH_DEPLOY_KEY} > /tmp/ssh_key
