--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -17,4 +17,4 @@ jobs:
           echo ${SSH_DEPLOY_KEY} > /tmp/ssh_key
           ssh github@workout.burchbytes.com bash < ./scripts/deploy.sh
         env:
-          SSH_DEPLOY_KEY = ${{ secrets.SSH_DEPLOY_KEY }}
+          SSH_DEPLOY_KEY: ${{ secrets.SSH_DEPLOY_KEY }}
