--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -14,7 +14,7 @@ jobs:
       - run: |
           touch /tmp/ssh_key
           chmod 600 /tmp/ssh_key
-          echo ${SSH_DEPLOY_KEY} > /tmp/ssh_key
+          echo -n "${SSH_DEPLOY_KEY}" > /tmp/ssh_key
           ssh -o StrictHostKeyChecking=no -i /tmp/ssh_key github@workout.burchbytes.com bash < ./scripts/deploy.sh
-        env:
+        with:
           SSH_DEPLOY_KEY: ${{ secrets.SSH_DEPLOY_KEY }}
