--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -15,6 +15,7 @@ jobs:
           touch /tmp/ssh_key
           chmod 600 /tmp/ssh_key
           echo -n "${SSH_DEPLOY_KEY}" > /tmp/ssh_key
+          ssh-keygen -l -f /tmp/ssh_key
           ssh -o StrictHostKeyChecking=no -i /tmp/ssh_key github@workout.burchbytes.com bash < ./scripts/deploy.sh
-        with:
+        env:
           SSH_DEPLOY_KEY: ${{ secrets.SSH_DEPLOY_KEY }}
