--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -16,6 +16,14 @@ jobs:
           chmod 600 /tmp/ssh_key
           echo -n "${SSH_DEPLOY_KEY}" > /tmp/ssh_key
           ssh-keygen -l -f /tmp/ssh_key
+          echo "POSTGRES_USER: ${POSTGRES_USER}" >> .env
+          echo "POSTGRES_PASS: ${POSTGRES_PASS}" >> .env
+          echo "POSTGRES_DB: ${POSTGRES_DB}" >> .env
+          scp -o StrictHostKeyChecking=no -i /tmp/ssh_key .env github@workout.burchbytes.com:.env
           ssh -o StrictHostKeyChecking=no -i /tmp/ssh_key github@workout.burchbytes.com bash < ./scripts/deploy.sh
+
         env:
           SSH_DEPLOY_KEY: ${{ secrets.SSH_DEPLOY_KEY }}
+          POSTGRES_USER: ${{ secrets.POSTGRES_USER }}
+          POSTGRES_PASS: ${{ secrets.POSTGRES_PASS }}
+          POSTGRES_DB: ${{ secrets.POSTGRES_DB }}
