--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -5,6 +5,11 @@ spring.jpa.open-in-view=true
 logging.level.web=INFO
 spring.devtools.add-properties=false
 
+### Postgres ###
+spring.datasource.url="jdbc:postgresql://postgres:5432/${POSTGRES_DB}"
+spring.datasource.username=${POSTGRES_USER}
+spring.datasource.password=${POSTGRES_PASS}
+
 ### Swagger ###
 swagger.title="Workout Tracker API"
 swagger.description="Workout Tracker App API"
