--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -18,6 +18,8 @@ jobs:
       - run: mvn test
 
   deploy:
+    needs:
+      test
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
