Fix Security config

--- a/compose.yaml
+++ b/compose.yaml
@@ -27,6 +27,8 @@ services:
       - supertokens-core
     networks:
       - app_network
+    environment:
+      API_DOMAIN: "${API_DOMAIN}"
     user: 'node'
     volumes:
       - ./auth-server:/home/node/app
