--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -10,7 +10,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
       - uses: actions/setup-java@v4
         with:
           distribution: 'temurin'
@@ -35,6 +35,7 @@ jobs:
           echo "POSTGRES_USER: ${POSTGRES_USER}" >> .env
           echo "POSTGRES_PASS: ${POSTGRES_PASS}" >> .env
           echo "POSTGRES_DB: ${POSTGRES_DB}" >> .env
+          echo "API_DOMAIN: workout.burchbytes.com >> .env
           
           echo "Deploying ENV file"
           scp -o StrictHostKeyChecking=no -i /tmp/ssh_key .env github@workout.burchbytes.com:.env
