--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -10,20 +10,25 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-java@v4
+      - name: Checkout Source Code
+        uses: actions/checkout@v4
+      - name: Setup Java Environment
+        uses: actions/setup-java@v4
         with:
           distribution: 'temurin'
           java-version: '17'
-      - run: mvn test
+      - name: Run Tests
+        run: mvn test
 
   deploy:
     needs:
       test
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
-      - run: |
+      - name: Checkout Source Code
+        uses: actions/checkout@v4
+      - name: Deploy Code Changes
+        run: |
           echo "Creating SSH Key file"
           echo -n "${SSH_DEPLOY_KEY}" > /tmp/ssh_key
           chmod 600 /tmp/ssh_key
