Per user db schema works, tests pass!

--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -22,3 +22,4 @@ auth.api.jwks=/jwt/jwks.json
 #logging.level.org.hibernate.SQL=DEBUG
 #logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 #logging.level.org.hibernate.type=TRACE
+#logging.level.org.hibernate.orm.jdbc.bind=TRACE
