--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,4 +1,5 @@
 ### Spring ###
+server.address=127.0.0.1
 spring.application.name=workouttracker
 spring.sql.init.mode=always
 spring.jpa.open-in-view=true
