--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -1,12 +1,26 @@
+### Spring ###
+server.address=127.0.0.1
 spring.application.name=workouttracker
+spring.sql.init.mode=always
+spring.jpa.open-in-view=true
+logging.level.web=DEBUG
 
+### Swagger ###
+swagger.title="Workout Tracker API"
+swagger.description="Workout Tracker App API"
+swagger.version=v1
 swagger.name=Eli Burch
 swagger.email=eli.burch@burchbytes.com
 swagger.site=https://burchbytes.com
+swagger.url=http://127.0.0.1
+swagger.url.description=Server Url
 
-spring.sql.init.mode=always
+### Auth API ###
+auth.api.url=http://127.0.0.1/api/auth
+auth.api.jwks=/jwt/jwks.json
 
 ### debug ###
 #logging.level.org.hibernate.SQL=DEBUG
 #logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 #logging.level.org.hibernate.type=TRACE
+#logging.level.org.hibernate.orm.jdbc.bind=TRACE
