Use mvn wrapper for CI/CD

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -23,7 +23,7 @@ jobs:
           distribution: 'temurin'
           java-version: '17'
       - name: Run Tests
-        run: mvn test
+        run: ./mvnw test
 
   deploy:
     needs:
