--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -12,8 +12,8 @@ spring.datasource.username=${POSTGRES_USER}
 spring.datasource.password=${POSTGRES_PASS}
 
 ### Swagger ###
-swagger.title="Workout Tracker API"
-swagger.description="Workout Tracker App API"
+swagger.title=Workout Tracker API
+swagger.description=Workout Tracker App API
 swagger.version=v1
 swagger.name=Eli Burch
 swagger.email=eli.burch@burchbytes.com
