--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -1,5 +1,5 @@
 ### Spring ###
-server.address=127.0.0.1
+server.address=0.0.0.0
 spring.application.name=workouttracker
 spring.sql.init.mode=always
 spring.jpa.open-in-view=true
@@ -12,11 +12,16 @@ swagger.version=v1
 swagger.name=Eli Burch
 swagger.email=eli.burch@burchbytes.com
 swagger.site=https://burchbytes.com
-swagger.url=http://127.0.0.1
+swagger.url=http://0.0.0.0
 swagger.url.description=Server Url
 
+### Postgres ###
+spring.datasource.url=jdbc:postgresql://postgres:5432/${POSTGRES_DB}
+spring.datasource.username=${POSTGRES_USER}
+spring.datasource.password=${POSTGRES_PASS}
+
 ### Auth API ###
-auth.api.url=http://127.0.0.1/api/auth
+auth.api.url=http://auth-server:8000/api/auth
 auth.api.jwks=/jwt/jwks.json
 
 ### debug ###
