--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,5 +1,5 @@
 ### Spring ###
-server.address=127.0.0.1
+server.address=0.0.0.0
 spring.application.name=workouttracker
 spring.sql.init.mode=always
 spring.jpa.open-in-view=true
@@ -7,7 +7,7 @@ logging.level.web=INFO
 spring.devtools.add-properties=false
 
 ### Postgres ###
-spring.datasource.url="jdbc:postgresql://postgres:5432/${POSTGRES_DB}"
+spring.datasource.url=jdbc:postgresql://postgres:5432/${POSTGRES_DB}
 spring.datasource.username=${POSTGRES_USER}
 spring.datasource.password=${POSTGRES_PASS}
 
