--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,6 +8,7 @@
     "build": "tsc && vite build --mode=dev",
     "build:prod": "tsc && vite build --mode=prod",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "test": "jest",
     "preview": "vite preview",
     "gen-client": "npx @hey-api/openapi-ts -o src/workout-api-client -c fetch -i http://127.0.0.1/v3/api-docs"
   },
@@ -25,6 +26,8 @@
   },
   "devDependencies": {
     "@hey-api/openapi-ts": "^0.45.1",
+    "@testing-library/react": "^16.1.0",
+    "@types/jest": "^29.5.14",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
     "@typescript-eslint/eslint-plugin": "^7.2.0",
@@ -33,6 +36,9 @@
     "eslint": "^8.57.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "ts-jest": "^29.2.5",
     "typescript": "^5.2.2",
     "vite": "^5.2.0"
   }
