--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -5,7 +5,8 @@
     "lib": ["ES2020", "DOM", "DOM.Iterable"],
     "module": "ESNext",
     "skipLibCheck": true,
-
+    "esModuleInterop": true, // Fixes ts-jest import issues
+    "allowSyntheticDefaultImports": true, // allows for 'import React from "react";'
     /* Bundler mode */
     "moduleResolution": "bundler",
     "allowImportingTsExtensions": true,
@@ -26,5 +27,5 @@
     "**/*.tsx",
     "**/*.jsx",
     "**/*.js"
-  ]
+, "babel.config.mjs"  ]
 }
