--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -58,3 +58,5 @@ jobs:
           POSTGRES_USER: ${{ secrets.POSTGRES_USER }}
           POSTGRES_PASS: ${{ secrets.POSTGRES_PASS }}
           POSTGRES_DB: ${{ secrets.POSTGRES_DB }}
+      - name: Build the Docker image
+        run: docker build . --file Dockerfile --tag workout-tracker:$(date +%s)
