--- a/compose.yaml
+++ b/compose.yaml
@@ -34,6 +34,7 @@ services:
     working_dir: '/home/node/app'
     command: 'npm start'
   workout-tracker:
+    image: 'ghcr.io/redawl/workout-tracker'
     build:
       dockerfile: "Dockerfile"
     depends_on:
