Fix incorrect nginx port

--- a/compose.yaml
+++ b/compose.yaml
@@ -34,7 +34,7 @@ services:
     working_dir: '/home/node/app'
     command: 'npm start'
   workout-tracker:
-    image: 'ghcr.io/redawl/workout-tracker'
+    image: 'ghcr.io/redawl/workout-tracker:main'
     build:
       dockerfile: "Dockerfile"
     depends_on:
@@ -56,7 +56,7 @@ services:
     networks:
       - app_network
     ports:
-      - "127.0.0.1:80:80"
+      - "127.0.0.1:8080:80"
 
 networks:
   app_network:
