Add missing double qoute

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -37,7 +37,7 @@ jobs:
 
       - name: Build frontend
         run: |
-          cd ./frontend"
+          cd "./frontend"
           npm i
           npm run "build:prod"
           cd ..
